[package]
name = "convert"
version = "1.0.0"
edition = "2024"
authors = ["Maxim Tyuterev <maxtyuterev@gmail.com>"]

[profile.release]
opt-level = 3
debug = 0
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[dependencies]
image = "0.25.6"
clap = {version = "4.5.45", features = ["derive", "color", "help", "wrap_help", "suggestions", "error-context", "string"]}
indicatif = {version = "0.18.0", features = ["rayon"]}
anyhow = "1.0.99"
rayon = "1.11.0"
itertools = "0.14.0"
jwalk = "0.8.1"

